--- a/Projeto Pessoal/style.css
+++ b/Projeto Pessoal/style.css
@@ -4,6 +4,11 @@ body{
     overflow-x: hidden;
 }
 
+.cover{
+    display: table;
+    width: 100%;
+}
+
 
 .footer-text{
     text-align: center;
@@ -15,17 +20,19 @@ body{
     text-align: center;
     color: skyblue;
     display: table-cell;
-    vertical-align: middle;
+    vertical-align: middle; 
 }
 
-nav.navbar-transparent{
-    padding: 15px 0px;
-    background: rgba(0,0,0,0.6);
-    border: none;
+.navbar {
+    background-color: transparent;
+    background-image: none;
 }
 
-.section{
-    background color: black;
+#frist{
+    background: gray;
+    background-image: none;
+    display: table;
+    width: 100%;
 }
 
 /*---------------- Footer fixed in boot --------------------*/
@@ -33,7 +40,7 @@ nav.navbar-transparent{
 footer{
     background: gray;
     padding: 50px 0px 20px 0px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
