--- a/Projeto Pessoal/style.css
+++ b/Projeto Pessoal/style.css
@@ -1,59 +1,91 @@
+html,body,.cover {
+    height: 100%;
+    overflow: auto;
+}
 
 body{
     background: url(imagens/capa.png);
-    overflow-x: hidden;
+    font-family: helvetica,Arial,sans-serif;
+    background-attachment:fixed;
 }
+
 
 .cover{
     display: table;
     width: 100%;
 }
 
-
-.footer-text{
-    text-align: center;
-    position: center;
-    color: aliceblue;
-}
-
 .text-cover{
     text-align: center;
     color: skyblue;
     display: table-cell;
-    vertical-align: middle; 
+    vertical-align: middle;
+    padding-bottom: 200px;
 }
 
-.navbar {
+.navbar{
     background-color: transparent;
     background-image: none;
+    padding: 15px 0px;
+    background: rgba(0,0,0,0.6);
+    border: none;
 }
 
 #frist{
-    background: gray;
-    background-image: none;
+    background: rgba(0,0,0,0.6);
     display: table;
     width: 100%;
+    padding-bottom: 400px;
+    padding-top: 300px;
 }
 
+#second{
+    display: table;
+    width: 100%;
+    padding-bottom: 400px;
+    padding-top: 300px;
+}
+
+#third{
+    background: rgba(0,0,0,0.6);
+    display: table;
+    width: 100%;
+    padding-bottom: 300px;
+    padding-top: 300px;
+}
 /*---------------- Footer fixed in boot --------------------*/
 
 footer{
     background: gray;
-    padding: 50px 0px 20px 0px;
-    position: fixed;
+    padding: 30px 0px 20px 0px;
+    position: relative;
     bottom: 0;
     width: 100%;
+    background: rgba(0,0,0,0.6);
+    border-color: aliceblue;
 }
 
-html,body,.cover {
-    height: 100%;
-    overflow: auto;
+.footer-text{
+    text-align: center;
+    position: relative;
+    color: aliceblue;
 }
 
 /*---------------- Tipografia --------------------*/
 
 h1{
     font-weight: 900;
+    font-size: 50px;
     letter-spacing: -0.05em;
     margin-top: 50px;
+    text-transform: uppercase;
+}
+
+a{
+    color: skyblue;
+    overflow-x: auto;
+}
+
+p{
+    text-align: center;
 }
